web/src/app/app.component.scss
@import "../styles.scss";

:host {
  display: grid;
  grid-template: 6.4rem auto / 25.6rem auto;
  transform: translateX(-25.6rem);
  width: calc(100% + 25.6rem);
}

.sidebar {
  grid-row: 1 / 3;

  & > header {
    border-bottom: 0.1rem solid #ececec;
    display: flex;
    height: 6.4rem;
    justify-content: flex-end;
  }

  & > nav {
    color: #333;
    font: normal 400 1.6rem "Lato", sans-serif;

    > ul {
      > li:first-child {
        margin-top: 2.4rem;
      }

      > li > a {
        display: block;
        padding: 2.4rem 3.2rem;
      }
    }
  }
}

.navbar {
  border-bottom: 0.1rem solid #ececec;
  display: flex;
}

.main {
  grid-column: 2 / 3;
  grid-row: 2 / 3;

  > .loading-animation {
    > div {
      height: 64%;
    }
  }
}

.pre-footer {
  background: right bottom / 100% auto repeat url("../assets/images/computer-3163436.svg");
  grid-column: 2 / 3;
  grid-row: 3 / 4;
  margin-top: 8rem;
  height: 15.4rem;

  &:before {
    background: rgb(255, 255, 255);
    background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
    content: "";
    display: block;
    height: 100%;
    position: relative;
    width: 100%;
  }

  @include md {
    opacity: 0.64;
  }
}

.footer {
  background: #4d4d4d;
  color: #e6e6e6;
  font: normal 300 1.6rem Lato, sans-serif;
  grid-column: 2 / 3;
  grid-row: 4 / 5;

  > ._wide {
    display: flex;
    flex-direction: column;

    @include md {
      flex-direction: row;
    }

    > .cvar,
    > .links {
      flex: 0.3;
    }

    > .cvar,
    > .subscription,
    > .links {
      margin: 0 -3.2rem;
      padding: 3.2rem;

      @include md {
        margin: 0;
      }

      > .section-title {
        font-size: 1.8rem;
        font-weight: 400;
        margin-bottom: 2.4rem;
        text-transform: uppercase;
      }
    }

    > .cvar {
      > .var,
      > .copyright,
      > .social-networks {
        margin-top: 2rem;

        &:first-child {
          margin-top: 0;
        }
      }

      > .social-networks > a {
        display: inline-block;
        font-size: 2.4rem;
        margin-left: 1.6rem;

        &:first-child {
          margin-left: 0;
        }
      }
    }

    > .subscription {
      background: #333;
      flex: 0.4;
    }

    > .links {
      > ul > li {
        display: block;
        margin-top: 2rem;

        &:first-child {
          margin-top: 0;
        }
      }
    }
  }
}

